# FAKT

./: CMakeLists.txt  Doxyfile  settings.ini
contrib/dbf/: CMakeLists.txt
contrib/dbf/include/: dbf.h  dbf.hpp
contrib/dbf/src/: cdemo.c  dbf.c  dbf.inl  main.c
form/: address_content.ui  address_page.ui  adress_page.ui  basetab.ui  fakt.ui  general_content.ui  general_main_content.ui  general_main_page.ui  general_page.ui  general_print_page.ui  invoice_page.ui  leistung.ui  leistung_page.ui  main_tab.ui  material.ui  material_content.ui  material_page.ui  offer_page.ui  order_content.ui  page_framework.ui  payment_content.ui  payment_page.ui  percentage_content.ui  rechnung.ui  service_content.ui  service_page.ui  summary_content.ui  summary_page.ui
include/: adding_pages.h  address.h  adress.h  adresse.h  basetab.h  data_entries.h  export.h  fakt.h  general_print_page.h  invoice.h  jobsite.h  leistung.h  log.h  material.h  offer.h  overwatch.h  rechnung.h  service.h  single_entry.h  single_invoice.h  single_offer.h  sql_helper.hpp  sql_helper_impl.hpp  utils.h
include/functionality/: backup.h  data_entries.h  defines.h  export.h  fakt.h  log.h  overwatch.h  position.h  record.h  sql_helper.h  sql_helper.hpp  sql_helper_impl.hpp  utils.h  utils.hpp  year_watchdog.h
include/pages/: address_page.h  general_main_page.h  general_page.h  general_print_page.h  invoice_page.h  material_page.h  offer_page.h  order_page.h  page_framework.h  parent_page.h  payment_page.h  percentage_page.h  service_page.h  single_entry.h  single_invoice.h  single_jobsite.h  single_offer.h  summary_page.h
include/tabs/: address.h  basetab.h  general.h  invoice.h  jobsite.h  main_tab.h  material.h  offer.h  payment.h  service.h
scripts/: FAKT.bat  create_extra_database.bat  create_fakt_db.bat  create_invoices.bat  create_jobsites.bat  create_offers.bat
src/: adding_pages.cpp  address.cpp  adress.cpp  adresse.cpp  backup.cpp  basetab.cpp  export.cpp  fakt.cpp  general_print_page.cpp  invoice.cpp  jobsite.cpp  leistung.cpp  log.cpp  main.cpp  material.cpp  offer.cpp  rechnung.cpp  service.cpp  single_entry.cpp  single_invoice.cpp  single_offer.cpp  utils.cpp
src/functionality/: backup.cpp  data_entries.cpp  export.cpp  fakt.cpp  log.cpp  position.cpp  record.cpp  sql_helper.cpp  utils.cpp  year_watchdog.cpp
src/pages/: address_page.cpp  general_main_page.cpp  general_page.cpp  general_print_page.cpp  invoice_page.cpp  material_page.cpp  offer_page.cpp  order_page.cpp  page_framework.cpp  parent_page.cpp  payment_page.cpp  percentage_page.cpp  service_page.cpp  single_entry.cpp  single_invoice.cpp  single_jobsite.cpp  single_offer.cpp  summary_page.cpp
src/tabs/: address.cpp  basetab.cpp  general.cpp  invoice.cpp  jobsite.cpp  main_tab.cpp  material.cpp  offer.cpp  payment.cpp  service.cpp
templates/: general_offer.lrxml
templates/long/: all.lrxml  positions.lrxml
templates/long/invoice/: all.lrxml
templates/long/jobsite/: positions.lrxml
templates/long/offer/: all.lrxml  positions.lrxml
templates/print/: general_offer.lrxml
templates/short/: all.lrxml  groups.lrxml  positions.lrxml
templates/short/invoice/: all.lrxml  groups.lrxml  positions.lrxml
templates/short/jobsite/: positions.lrxml
templates/short/offer/: all.lrxml  groups.lrxml  positions.lrxml
test/: CMakeLists.txt  entry.cpp
tools/: CMakeLists.txt  DbfFile.cpp  DbfFile.h  create_extra_database.cpp  create_temp_database.cpp  dbfToDb.cpp  invoiceAndOfferToDb.cpp  invoiceToDb.cpp  utf_8.h  util.cpp  util.h
