set(name sqlite3)
add_library(${name} ${name}.h ${name}.c)
target_compile_options(${name} PRIVATE /TC)
SET_SOURCE_FILES_PROPERTIES(${name}.c PROPERTIES LANGUAGE C) 

set(name dbfToDatabase)
add_executable(${name} utf_8.h util.h util.cpp dbfToDb.cpp)
target_include_directories(${name} PUBLIC ${DBF_DIR}/include)
target_link_libraries(${name} sqlite3)
target_link_libraries(${name} debug DBFd.lib optimized DBF.lib)

set(name invoiceAndOfferToDb)
add_executable(${name} utf_8.h util.h util.cpp ${name}.cpp)
target_include_directories(${name} PUBLIC ${DBF_DIR}/include)
target_link_libraries(${name} sqlite3)
target_link_libraries(${name} debug DBFd.lib optimized DBF.lib)
